# Dark-Engine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dark Engine.sln  DarkEngine.sharpmake.cs  Doxyfile  Generate.bat  GenerateProject.py  LICENSE  README.md  imgui.ini  vc140.idb  vcpkg.json
Dark Engine/Source/: CMakeLists.txt  DarkEditor.Build.cs  Title.md
Dark Engine/Source/Runtime/: CMakeLists.txt
Dark Engine/Source/Runtime/ApplicationCore/: ApplicationCore.module.sharpmake.cs  CMakeLists.txt
Dark Engine/Source/Runtime/Audio/: Audio.h
Dark Engine/Source/Runtime/Core/: CMakeLists.txt  Core.Build.cs  Core.h  Core.module.sharpmake.cs  CoreDefines.h  CoreMinimal.h  CorePlatform.h  CoreTypes.h
Dark Engine/Source/Runtime/Core/Application/: Application.cpp  Application.h
Dark Engine/Source/Runtime/Core/CommandLine/: CommandLine.cpp  CommandLine.h
Dark Engine/Source/Runtime/Core/ConfigManager/: FConfigManager.cpp  FConfigManager.h
Dark Engine/Source/Runtime/Core/Delegate/: Delegate.h
Dark Engine/Source/Runtime/Core/Function/: UFunction.h
Dark Engine/Source/Runtime/Core/Logging/: Logger.cpp  Logger.h  Logger.hpp
Dark Engine/Source/Runtime/Core/Math/: DarkMathUtility.cpp  DarkMathUtility.h
Dark Engine/Source/Runtime/Core/Memory/: TGlobalPtr.h  TMemory.cpp  TMemory.h  TUniquePtr.h
Dark Engine/Source/Runtime/Core/Misc/: ScopeLock.h
Dark Engine/Source/Runtime/Core/Private/: CoreGlobals.cpp
Dark Engine/Source/Runtime/Core/Public/: CoreFwd.h  CoreGlobals.h  CoreMinimal.h  CoreTypes.h
Dark Engine/Source/Runtime/Core/Settings/: PerEngineSettings.cpp  PerEngineSettings.h
Dark Engine/Source/Runtime/Core/Threads/: Threads.h
Dark Engine/Source/Runtime/Core/Timer/: GameTimer.cpp  GameTimer.h
Dark Engine/Source/Runtime/Core/Transform/: FVector.cpp  FVector.h
Dark Engine/Source/Runtime/Core/Windows/: MinimalWindowsAPI.cpp  MinimalWindowsAPI.h  WindowsSystemIncludes.h
Dark Engine/Source/Runtime/CoreDObject/: CMakeLists.txt  CoreDObject.module.sharpmake.cs
Dark Engine/Source/Runtime/CoreDObject/public/: CoreDObject.h
Dark Engine/Source/Runtime/CoreGObject/: CMakeLists.txt  CoreDObject.module.sharpmake.cs
Dark Engine/Source/Runtime/CoreGObject/private/: Class.cpp  GObjectArray.cpp  Object.cpp  ObjectBase.cpp  ObjectPtr.cpp
Dark Engine/Source/Runtime/CoreGObject/public/: Class.h  DeferredRegistry.h  GObjectArray.h  Object.h  ObjectBase.h  ObjectMacros.h  ObjectPtr.h  PropertyMacros.h
Dark Engine/Source/Runtime/CrashReportCore/: CrashReportConfig.cpp  CrashReportConfig.h
Dark Engine/Source/Runtime/D3D12RHI/: CMakeLists.txt  D3D12RHI.module.sharpmake.cs
Dark Engine/Source/Runtime/D3D12RHI/private/: D3D12Adapter.cpp  D3D12Adapter.h  D3D12BarrierBatcher.cpp  D3D12BarrierBatcher.h  D3D12BindlessDescriptors.cpp  D3D12BindlessDescriptors.h  D3D12CommandContext.cpp  D3D12CommandContext.h  D3D12CommandList.cpp  D3D12CommandList.h  D3D12ConstantBuffer.cpp  D3D12ConstantBuffer.h  D3D12Descriptors.cpp  D3D12Descriptors.h  D3D12Device.cpp  D3D12Device.h  D3D12PipelineState.cpp  D3D12PipelineState.h  D3D12Queue.h  D3D12RHICommon.h  D3D12RHIPrivate.cpp  D3D12RHIPrivate.h  D3D12Resources.cpp  D3D12Resources.h  D3D12RootSignature.cpp  D3D12RootSignature.h  D3D12Shader.h  D3D12StateCache.cpp  D3D12StateCache.h  D3D12Submission.h  D3D12Texture.cpp  D3D12Texture.h  D3D12ThirdParty.h  D3D12Util.h  D3D12View.cpp  D3D12View.h  D3D12Viewport.cpp  D3D12Viewport.h  d3dx12.h
Dark Engine/Source/Runtime/D3D12RHI/public/: D3D12Defines.h  D3D12DynamicRHI.h  D3D12RHI.h  D3D12RootSignatureDefinitions.h
Dark Engine/Source/Runtime/DarkUI/: CMakeLists.txt
Dark Engine/Source/Runtime/DarkUI/Private/: DCommon.cpp  DUICommon.cpp  SlotBase.cpp
Dark Engine/Source/Runtime/DarkUI/Public/: SlotBase.h
Dark Engine/Source/Runtime/Editor/: CMakeLists.txt  Editor.module.sharpmake.cs
Dark Engine/Source/Runtime/Editor/private/: DEditor.cpp
Dark Engine/Source/Runtime/Editor/public/: DEditor.h
Dark Engine/Source/Runtime/Engine/: CMakeLists.txt  Engine.module.sharpmake.cs
Dark Engine/Source/Runtime/Engine/private/: CameraTypes.cpp  Canvas.cpp  DEngine.cpp  DarkClient.cpp  DefaultCamera.cpp  EditorEngine.cpp  EditorViewportClient.cpp  Engine.cpp  EngineResourceImporter.cpp  Entity.cpp  Level.cpp  LocalVertexFactory.cpp  MeshObject.cpp  Pawn.cpp  PrimitiveSceneProxy.cpp  SceneResourceBuilder.cpp  SceneView.cpp  World.cpp  (+4 more)
Dark Engine/Source/Runtime/Input/: CMakeLists.txt  Input.module.sharpmake.cs  InputCore.cpp  InputCore.h
Dark Engine/Source/Runtime/Launch/: CMakeLists.txt  Launch.Build.cs  Launch.module.sharpmake.cs
Dark Engine/Source/Runtime/Package/: CMakeLists.txt
Dark Engine/Source/Runtime/PhysicsCore/: CMakeLists.txt
Dark Engine/Source/Runtime/Platform/: Platform.cpp  Platform.h
Dark Engine/Source/Runtime/RHI/: CMakeLists.txt  RHI.module.sharpmake.cs
Dark Engine/Source/Runtime/Render/: CMakeLists.txt  Launch.module.sharpmake.cs  Render.module.sharpmake.cs  Renderer.cpp  Renderer.h
Dark Engine/Source/Runtime/Renderer/: CMakeLists.txt  Renderer.module.sharpmake.cs
Dark Engine/Source/Runtime/Scene/: CMakeLists.txt
Dark Engine/Source/Runtime/Scripting/: CMakeLists.txt
Dark Engine/Source/Runtime/TestModule/: CMakeLists.txt
Dark Engine/Source/Runtime/UICore/: CMakeLists.txt  UICore.module.sharpmake.cs
Dark Engine/Source/Runtime/VulkanRHI/: CMakeLists.txt
Dark Engine/Source/Runtime/Windows/: CMakeLists.txt
Dark Engine/Source/Runtime/World/: CMakeLists.txt  World.cpp  World.h  World.module.sharpmake.cs
Dark Engine/Source/Shaders/: Blur.cso  Blur.hlsl  Common.hlsl  FXAA.hlsl  Forest.hlsl  FractalShader.hlsl  IncreaseBright.cso  IncreaseBright.hlsl  LightingUtils.hlsl  PixelShader.cso  PixelShader.hlsl  PostProcess.cso  RandomShader.cso  RandomShader.hlsl  ScreenRectangle.hlsl  Seascape.hlsl  Skybox.cso  Skybox.hlsl  SkyboxPixel.hlsl  Test.hlsl  TestShader.dgsl  VertexShader.cso  VertexShader.hlsl  tSestShader.hlsl
Dark Engine/Source/Templates/: AssertError.html  UnhandledError.html
Dark Engine/Source/Windows/: Definitions.h
(+4822 files in other folders)
