add_library(Core)


set(VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
set(VERSION_MINOR ${PROJECT_VERSION_MINOR})
set(VERSION_PATCH ${PROJECT_VERSION_PATCH})
set(VERSION_TWEAK ${PROJECT_VERSION_TWEAK})
set(VERSION_PREFIX ${PROJECT_PREFIX})
set(BUILD_TYPE_PREFIX ${CMAKE_BUILD_TYPE})

configure_file("Private/Misc/EngineVersion.cpp.var" "${CMAKE_CURRENT_SOURCE_DIR}/Private/Misc/EngineVersion.cpp" @ONLY)
ADD_PRIVATE_LIBRARY(Core Optick)

SettingProject(Core)

if(PROJECT_TYPE_LINK STREQUAL "DYNAMIC")
	ADD_PUBLIC_DEFINES(Core "DYNAMIC_TYPE_LINK=1")
else()
	ADD_PUBLIC_DEFINES(Core "DYNAMIC_TYPE_LINK=0")
endif()